--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "patqdasilva/patqdasilva.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "pqd_headshot_square.jpg"
   name             : "Patrick Queiroz Da Silva"
   pronouns         : # example: "she/her"  
   bio              : "MS in CSE @ OSU\nData Scientist for OSU Psychiatry"
