--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : &name "Patrick Queiroz Da Silva"
 description              : &description "MS in CSE @ OSU\nData Scientist for OSU Psychiatry"
 url                      : https://patqdasilva.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "patqdasilva/patqdasilva.github.io"
+repository               : "patqdasilva.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
