--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Patrick Queiroz Da Silva"
 title_separator          : "-"
 name                     : &name "Patrick Queiroz Da Silva"
-description              : &description "MS in CSE @ OSU\nData Scientist for OSU Psychiatry"
+description              : &description "MS student @ OSU CSE\nData Scientist @ OSU Psychiatry"
 url                      : https://patqdasilva.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "patqdasilva.github.io"
@@ -25,8 +25,8 @@ author:
   avatar           : "pqd_headshot_square.JPG"
   name             : "Patrick Queiroz Da Silva"
   pronouns         : # example: "she/her"  
-  bio              : "<p>MS in CSE @ OSU<br>Data Scientist for OSU Psychiatry"
-  location         : "Earth</p>"
+  bio              : "MS in CSE @ OSU<br>Data Scientist for OSU Psychiatry"
+  location         : "United States"
   employer         : "Ohio State University"
   uri              : # URL
   email            : "dasilva.30@osu.edu" 
