--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Patrick Queiroz Da Silva"
 title_separator          : "-"
 name                     : &name "Patrick Queiroz Da Silva"
-description              : &description "MS student @ OSU CSE\nData Scientist @ OSU Psychiatry"
+description              : &description ""
 url                      : https://patqdasilva.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "patqdasilva.github.io"
@@ -25,7 +25,7 @@ author:
   avatar           : "pqd_headshot_square.JPG"
   name             : "Patrick Queiroz Da Silva"
   pronouns         : # example: "she/her"  
-  bio              : "MS in CSE @ OSU<br>Data Scientist for OSU Psychiatry"
+  bio              : "MS student @ OSU CSE\<br>Data Scientist @ OSU Psychiatry"
   location         : "United States"
   employer         : "Ohio State University"
   uri              : # URL
