--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "pqd_headshot_square.JPG"
   name             : "Patrick Queiroz Da Silva"
   pronouns         : # example: "she/her"  
-  bio              : "MS student @ OSU CSE<br>Data Scientist @ OSU Psychiatry"
+  bio              : "MSc Student @ OSU CSE<br>Data Scientist @ OSU Psychiatry"
   location         : "United States"
   employer         : "Ohio State University"
   uri              : # URL
