--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@
 locale                   : "en-US"
 site_theme               : "default"
 title                    : ""
-title_separator          : "-"
+title_separator          : ""
 name                     : &name "Patrick Queiroz Da Silva"
-description              : &description ""
+description              : &description "Personal Research Website for Patrick Queiroz Da Silva"
 url                      : https://patqdasilva.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "patqdasilva.github.io"
@@ -25,7 +25,7 @@ author:
   avatar           : "pqd_headshot_square.JPG"
   name             : "Patrick Queiroz Da Silva"
   pronouns         : # example: "she/her"  
-  bio              : "MSc Student @ OSU CSE<br>Data Scientist @ OSU Psychiatry"
+  bio              : "MSc Student  @ OSU CSE<br>Data Scientist @ OSU Psychiatry"
   location         : "United States"
   employer         : "Ohio State University"
   uri              : # URL
