--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # URL
+  googlescholar    : https://scholar.google.com/citations?user=3OWkZswAAAAJ&hl=en&oi=sra
   impactstory      : # URL
   orcid            : "https://orcid.org/0009-0005-4527-7673"
   semantic         : # URL
