--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "pqd_headshot_square.JPG"
   name             : "Patrick Queiroz Da Silva"
   pronouns         : # example: "she/her"  
-  bio              : "M.S. Student in CSE @ OSU <br>Data Scientist for OSU Psychiatry"
+  bio              : "Ph.D. Student in CSE @ OSU <br>Data Scientist for OSU Psychiatry"
   location         : "United States"
   employer         : "Ohio State University"
   uri              : # URL
